--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
 GOOGLECLOUD_SERVICEACCOUNTCREDENTIALS=
 HUMIOINGESTTOKEN=
-FLYIO_ACCESS_TOKEN=
 GLOBAL_ACCESS_TOKEN=
 AUTH__GITHUB__CLIENT_ID=
 AUTH__GITHUB__CLIENT_SECRET=
@@ -9,3 +8,4 @@ GITHUB__GITHUBAPP__PRIVATE_KEY_CERTIFICATE_BASE64=
 JWT__KEY=
 JWT__ISSUER=
 JWT__AUDIENCE=
+FRONTEND_URL=
