--- a/backend/Api.Hosting/Api.Hosting.csproj
+++ b/backend/Api.Hosting/Api.Hosting.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Api.Data\Api.Data.csproj" />
     <ProjectReference Include="..\Api.Abstractions\Api.Abstractions.csproj" />
+    <ProjectReference Include="..\..\modules\github\backend\Github\Github.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
