--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,14 @@ jobs:
               uses: actions/checkout@v3
               with:
                 submodules: 'true'
-
+            
             - name: Setup .NET
               uses: actions/setup-dotnet@v1
               with:
-                  dotnet-version: "9.x"
+                dotnet-version: "9.0.200"
+                    
+            - name: Create .env file
+              run: touch backend/.env
 
             - name: Test
               run: dotnet test backend/Base.sln
