--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
       dockerfile: Dockerfile.frontend
     ports:
       - "1234:5173"
-    networks:
-      - app-network
+    restart: always
 
   backend:
     build:
@@ -14,21 +13,10 @@ services:
       dockerfile: Dockerfile.backend
     ports:
       - "1235:5000"
-    networks:
-      - app-network
-
-  module-runner:
-    build:
-      context: .
-      dockerfile: Dockerfile.modules
+    restart: always
     volumes:
-      - ./modules:/app/modules
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - app-network
-    stop_grace_period: 20s
+      - private_keys_data:/app/privateKeys
 
-networks:
-  app-network:
-    driver: bridge
-    external: true
+volumes:
+      - app-network
+  private_keys_data:
